--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -1,9 +1,35 @@
 ﻿<Application x:Class="Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Client"
+             xmlns:local="clr-namespace:Client" xmlns:System="clr-namespace:System;assembly=netstandard"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <!-- Application Style Constants -->
+        <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#1d1d1f"/>
+        <SolidColorBrush x:Key="SecondaryBackgroundColor" Color="#141414"/>
+        <SolidColorBrush x:Key="TertiaryBackgroundColor" Color="#FF484848"/>
+        <SolidColorBrush x:Key="PrimaryForegroundColor" Color="#F5F5F7"/>
+
+        <SolidColorBrush x:Key="BluePrimaryActiveColor" Color="#0077ed"/>
+        <SolidColorBrush x:Key="BlueSecondaryActiveColor" Color="#4392F6"/>
+        <SolidColorBrush x:Key="BlueTertiaryActiveColor" Color="#1A65F9"/>
+
+        <SolidColorBrush x:Key="RedPrimaryActiveColor" Color="#FF5454"/>
+        <SolidColorBrush x:Key="RedSecondaryActiveColor" Color="#FF7070"/>
+        <SolidColorBrush x:Key="RedTertiaryActiveColor" Color="#FF3838"/>
+
+        <SolidColorBrush x:Key="YellowPrimaryActiveColor" Color="#f6c01e"/>
+        <SolidColorBrush x:Key="YellowSecondaryActiveColor" Color="#ffce3b"/>
+        <SolidColorBrush x:Key="YellowTertiaryActiveColor" Color="#edb200"/>
+
+        <SolidColorBrush x:Key="GreenPrimaryActiveColor" Color="#08C02C"/>
+        <SolidColorBrush x:Key="GreenSecondaryActiveColor" Color="#00EB2F"/>
+        <SolidColorBrush x:Key="GreenTertiaryActiveColor" Color="#1FFF4B"/>
+
+        <FontFamily x:Key="DefaultFontFamily">Microsoft JhengHei</FontFamily>
+
+        <System:Double x:Key="LargeFontSize">24</System:Double>
+        <System:Double x:Key="MediumFontSize">16</System:Double>
+        <System:Double x:Key="SmallFontSize">12</System:Double>
     </Application.Resources>
 </Application>
